--- a/articles/cognitive-services/LUIS/toc.yml
+++ b/articles/cognitive-services/LUIS/toc.yml
@@ -321,6 +321,18 @@
     - name: Vooraf gemaakte domeinverwijzing
       href: luis-reference-prebuilt-domains.md
       displayName: 'Calendar, Communication,Email,HomeAutomation,Note,Places, RestaurantReservation,ToDo,Utilities,Weather,Web'
+    - name: Aangepaste entiteitsverwijzing
+      items:
+        - name: Samengestelde entiteit
+          href: reference-entity-composite.md
+        - name: Lijstentiteit
+          href: reference-entity-list.md
+        - name: Pattern.any-entiteit
+          href: reference-entity-pattern-any.md
+        - name: Een entiteit in de vorm van een reguliere expressie
+          href: reference-entity-regular-expression.md
+        - name: Eenvoudige entiteit
+          href: reference-entity-simple.md
     - name: Azure-CLI
       href: 'https://go.microsoft.com/fwlink/?linkid=2092156'
     - name: PowerShell voor Azure RM
