--- a/articles/container-registry/TOC.yml
+++ b/articles/container-registry/TOC.yml
@@ -101,6 +101,8 @@
           href: container-registry-tasks-scheduled.md
         - name: Taken met meerdere stappen
           href: container-registry-tasks-multi-step.md
+        - name: Een installatiekopie maken met Buildpacks (preview)
+          href: container-registry-tasks-pack-build.md
         - name: Gebruiken met beheerde identiteit
           href: container-registry-tasks-authentication-managed-identity.md
     - name: Registers en andere Azure-services
