--- a/articles/active-directory/manage-apps/index.yml
+++ b/articles/active-directory/manage-apps/index.yml
@@ -48,4 +48,4 @@ sections:
         style: unordered
         items:
           - html: '<a href="https://docs.microsoft.com/azure/active-directory/saas-apps/">Zelfstudies voor SaaS-toepassingen</a>'
-          - html: <a href="/azure/active-directory/manage-apps/configure-single-sign-on-portal">Eenmalige aanmelding configureren</a>
+          - html: <a href="/azure/active-directory/manage-apps/application-proxy-add-on-premises-application">Een on-premises app toevoegen via een toepassingsproxy</a>
