--- a/articles/hdinsight/hadoop/TOC.yml
+++ b/articles/hdinsight/hadoop/TOC.yml
@@ -74,7 +74,7 @@
         - name: Apache Hive gebruiken met Apache Hadoop
           href: hdinsight-use-hive.md
           items:
-            - name: HDInsight-hulpprogramma's voor VSCode gebruiken
+            - name: Spark- en Hive-hulpprogramma's voor VSCode gebruiken
               href: ../hdinsight-for-vscode.md
               maintainContext: true
             - name: HDInsight-hulpprogramma’s voor Visual Studio gebruiken
