--- a/articles/cognitive-services/Bing-Spell-Check/index.yml
+++ b/articles/cognitive-services/Bing-Spell-Check/index.yml
@@ -7,7 +7,7 @@ metadata:
   description: Informatie over het gebruik van de Bing Spellingcontrole-API voor voorgestelde verbeteringen voor tekstdocumenten. Zelfstudies laten zien hoe u apps maakt die gebruikmaken van de API.
   services: cognitive-services
   author: aahill
-  manager: cgronlun
+  manager: nitinme
   ms.service: cognitive-services
   ms.subservice: bing-spell-check
   ms.tgt_pltfrm: na
