--- a/articles/cognitive-services/Bing-Web-Search/index.yml
+++ b/articles/cognitive-services/Bing-Web-Search/index.yml
@@ -7,7 +7,7 @@ metadata:
   description: 'Informatie over het gebruik van de Bing webzoekopdrachten-API om op internet te zoeken naar webpagina''s, afbeeldingen, video''s, nieuws en meer.'
   services: cognitive-services
   author: nitinme
-  manager: cgronlun
+  manager: nitinme
   ms.service: cognitive-services
   ms.subservice: bing-web-search
   ms.tgt_pltfrm: na
