--- a/articles/cognitive-services/Custom-Vision-Service/index.yml
+++ b/articles/cognitive-services/Custom-Vision-Service/index.yml
@@ -6,7 +6,7 @@ metadata:
   description: 'Informatie over hoe u Custom Vision gebruikt om aangepaste afbeeldingsclassificaties te maken, implementeren en verbeteren. Zelfstudies laten zien hoe u apps maakt die gebruikmaken van de API.'
   services: cognitive-services
   author: nitinme
-  manager: cgronlun
+  manager: nitinme
   ms.service: cognitive-services
   ms.subservice: custom-vision
   ms.tgt_pltfrm: na
