commit translated contents

--- a/articles/lab-services/TOC.yml
+++ b/articles/lab-services/TOC.yml
@@ -307,6 +307,8 @@
           href: 'https://azure.microsoft.com/pricing/details/lab-services/'
         - name: Stack Overflow
           href: 'https://stackoverflow.com/questions/tagged/azure-lab-services'
+        - name: Veelgestelde vragen
+          href: classroom-labs/classroom-labs-faq.md
     - name: DevTest Labs
       items:
         - name: Azure-updates
