--- a/articles/active-directory/fundamentals/index.yml
+++ b/articles/active-directory/fundamentals/index.yml
@@ -7,12 +7,12 @@ metadata:
   description: Meer informatie over de basisbegrippen en processen die beschikbaar zijn terwijl u Azure Active Directory gebruikt.
   services: active-directory
   ms.subservice: fundamentals
-  author: eross-msft
+  author: msaburnley
   manager: daveba
   ms.service: active-directory
   ms.topic: landing-page
   ms.date: 09/07/2018
-  ms.author: lizross
+  ms.author: ajburnle
 abstract:
   description: 'Meer informatie over de basisbegrippen en processen voor Azure Active Directory (Azure AD), waaronder over het maken van basisgebruikers en -groepen, en over het maken van een basisomgeving waarmee u aan de slag kunt.'
 sections:
