--- a/articles/azure-functions/TOC.yml
+++ b/articles/azure-functions/TOC.yml
@@ -119,7 +119,7 @@
         - name: Python
           href: functions-reference-python.md
     - name: Diagnostiek
-      href: ../app-service/overview-diagnostics.md
+      href: ../app-service/overview-diagnostics.md?toc=%2fazure%2fazure-functions%2ftoc.json
     - name: Prestatieoverwegingen
       href: functions-best-practices.md
     - name: Functions-proxy's
