--- a/articles/azure-maps/toc.yml
+++ b/articles/azure-maps/toc.yml
@@ -5,6 +5,7 @@
     - name: Wat is Azure Maps?
       href: about-azure-maps.md
 - name: Snelstartgidsen
+  expanded: true
   items:
     - name: Een webtoepassing maken
       href: quick-demo-map-app.md
