--- a/articles/machine-learning/data-science-virtual-machine/index.yml
+++ b/articles/machine-learning/data-science-virtual-machine/index.yml
@@ -5,7 +5,7 @@ metadata:
   title: Documentatie over Data Science Virtual Machine - Azure
   description: 'Informatie over hoe u Data Science Virtual Machine gebruikt, een experimentele omgeving in de Azure-cloud die speciaal voor gegevenswetenschap is gebouwd. DSVM bevat veel populaire gegevenswetenschap- en andere hulpprogramma''s die vooraf zijn geïnstalleerd en geconfigureerd voor het snel ontwikkelen van intelligente toepassingen voor geavanceerde analyses.'
   services: machine-learning
-  author: gopitk
+  author: vijetajo
   manager: cgronlun
   ms.service: machine-learning
   ms.subservice: data-science-vm
@@ -13,7 +13,7 @@ metadata:
   ms.devlang: na
   ms.topic: landing-page
   ms.date: 01/18/2018
-  ms.author: gokuma
+  ms.author: vijetaj
 abstract:
   description: 'De Data Science en Deep Learning Virtual Machines zijn aangepaste VM-installatiekopieën in Azure, vol met hulpprogramma’s voor data science, die worden gebruikt om intelligente toepassingen voor geavanceerde analyse te bouwen.'
 sections:
