--- a/articles/machine-learning/service/toc.yml
+++ b/articles/machine-learning/service/toc.yml
@@ -227,8 +227,12 @@
     - name: Modellen implementeren & bedienen
       items:
         - name: Waar en hoe u implementeert
-          displayName: publish azure kubernetes azure container instances
+          displayName: publish web service
           href: how-to-deploy-and-where.md
+        - name: Azure Container Instances
+          href: how-to-deploy-azure-container-instance.md
+        - name: Azure Kubernetes Service
+          href: how-to-deploy-azure-kubernetes-service.md
         - name: Inferentie van GPU
           href: how-to-deploy-inferencing-gpus.md
         - name: Inferentie van FPGA's
