commit translated contents

--- a/articles/azure-monitor/toc.yml
+++ b/articles/azure-monitor/toc.yml
@@ -308,7 +308,13 @@
               displayname: 'live, quickpulse, quick pulse, live metrics'
               href: app/live-stream.md
             - name: Metrische gegevens
-              href: app/metrics-explorer.md
+              items:
+                - name: Vooraf samengevoegde metrische gegevens op basis van logboeken
+                  href: app/pre-aggregated-metrics-log-metrics.md
+                - name: Definities van metrische gegevens op basis van logboeken
+                  href: platform/app-insights-metrics.md
+                - name: Klassieke Metrics Explorer
+                  href: app/metrics-explorer.md
             - name: Search
               href: app/diagnostic-search.md
             - name: Profiler
@@ -425,8 +431,6 @@
                   href: app/asp-net-dependencies.md
                 - name: ApplicationInsights.config
                   href: app/configuration-with-applicationinsights-config.md
-                - name: Vooraf samengevoegde metrische gegevens op basis van logboeken
-                  href: app/pre-aggregated-metrics-log-metrics.md
                 - name: Diagnostische gegevens voor transacties
                   href: app/transaction-diagnostics.md
                 - name: Aangepaste gegevensbronnen correleren
@@ -659,15 +663,13 @@
                 - name: Verzamelen in Logboeken
                   href: platform/diagnostic-logs-stream-log-store.md
                 - name: Verzamelen van Azure Storage
-                  href: platform/collect-azure-metrics-logs.md
+                  href: platform/azure-storage-iis-table.md
                 - name: Archiveren naar opslag
                   href: platform/archive-diagnostic-logs.md
                 - name: Gegevens streamen naar Event Hubs
                   href: platform/diagnostic-logs-stream-event-hubs.md
                 - name: Inschakelen met Resource Manager-sjablonen
                   href: platform/diagnostic-logs-stream-template.md
-                - name: Servicelogboeken en metrische gegevens
-                  href: platform/azure-storage-iis-table.md
             - name: Gegevens streamen naar Event Hubs
               href: platform/stream-monitoring-data-event-hubs.md
             - name: Key Vault-analyse
@@ -736,8 +738,8 @@
               href: platform/metrics-getting-started.md
             - name: Geavanceerde functies van Metrics Explorer
               href: platform/metrics-charts.md
-            - name: Metrische gegevens op basis van logboeken
-              href: platform/app-insights-metrics.md
+            - name: Voorbeelden van grafieken met metrische gegevens
+              href: platform/metric-chart-samples.md
             - name: Problemen met grafieken met metrische gegevens oplossen
               href: platform/metrics-troubleshoot.md
         - name: Logboeken
