--- a/articles/governance/policy/toc.yml
+++ b/articles/governance/policy/toc.yml
@@ -274,6 +274,9 @@
     - name: Beleid voor array-eigenschappen opstellen
       displayName: 'array property, alias, aliases, in, notIn, type, defaultValue'
       href: ./how-to/author-policies-for-arrays.md
+    - name: Configuratiebeleid voor gasten maken
+      displayName: 'powershell, dsc, chef, linux, windows'
+      href: ./how-to/guest-configuration-create.md
     - name: Nalevingsgegevens ophalen
       displayName: 'evaluation, scan, summarize, query, events, log analytics'
       href: ./how-to/get-compliance-data.md
