--- a/articles/logic-apps/toc.yml
+++ b/articles/logic-apps/toc.yml
@@ -155,6 +155,8 @@
           href: logic-apps-enterprise-integration-b2b-business-continuity.md
     - name: Verbinding maken met virtuele netwerken met een geïsoleerde omgeving
       href: connect-virtual-network-vnet-isolated-environment.md
+    - name: Artefacten toevoegen aan integratieserviceomgevingen
+      href: add-artifacts-integration-service-environment-ise.md
     - name: Toegang tot on-premises gegevens
       items:
         - name: Een gegevensgateway installeren
@@ -295,6 +297,8 @@
           href: manage-logic-apps-with-visual-studio.md
         - name: Integratieaccounts beheren
           href: logic-apps-enterprise-integration-accounts.md
+        - name: Integratieserviceomgevingen beheren
+          href: ise-manage-integration-service-environment.md
         - name: Migreren naar het meest recente schema
           href: ../connectors/connectors-schema-migration.md
     - name: Testen
