--- a/articles/data-factory/TOC.yml
+++ b/articles/data-factory/TOC.yml
@@ -556,6 +556,8 @@
           href: how-to-create-schedule-trigger.md
         - name: Een tumblingvenstertrigger maken
           href: how-to-create-tumbling-window-trigger.md
+        - name: Een afhankelijkheid voor een tumblingvenstertrigger maken
+          href: tumbling-window-trigger-dependency.md
     - name: Sjablonen
       items:
         - name: Overzicht van sjablonen
