commit translated contents

--- a/articles/active-directory/manage-apps/toc.yml
+++ b/articles/active-directory/manage-apps/toc.yml
@@ -286,6 +286,8 @@
           href: application-proxy-security.md
         - name: Netwerktopologie
           href: application-proxy-network-topology.md
+        - name: Hoge beschikbaarheid en taakverdeling
+          href: application-proxy-high-availability-load-balancing.md
         - name: Vergelijking van toegangsoplossingen op afstand
           href: application-proxy-migration.md
     - name: Handleidingen
