--- a/articles/traffic-manager/toc.yml
+++ b/articles/traffic-manager/toc.yml
@@ -10,6 +10,8 @@
       href: quickstart-create-traffic-manager-profile.md
     - name: Traffic Manager-profiel maken - PowerShell
       href: quickstart-create-traffic-manager-profile-powershell.md
+    - name: Traffic Manager-profiel maken - Azure CLI
+      href: quickstart-create-traffic-manager-profile-cli.md
 - name: Zelfstudies
   items:
     - name: Verkeer routeren voor lage latentie
