--- a/articles/active-directory/index.yml
+++ b/articles/active-directory/index.yml
@@ -3,252 +3,252 @@ title: Documentatie voor Azure Active Directory
 summary: Azure Active Directory (Azure AD) is een multi-tenant identiteit- en toegangsbeheerservice in de cloud.
 brand: azure
 metadata:
-  title: Documentatie voor Azure Active Directory - zelfstudies, API-verwijzing
+  title: Documentatie voor Azure Active Directory
   description: Azure Active Directory (Azure AD) is de multi-tenant directory- en identiteitsbeheerservice van Microsoft in de cloud die belangrijke directory services, toegangsbeheer voor toepassingen en identiteitsbeveiliging in één oplossing combineert.
-  author: mtillman
-  manager: daveba
   ms.service: active-directory
   ms.topic: hub-page
-  ms.date: 04/25/2019
-  ms.author: mtillman
   ms.collection: M365-identity-device-management
-  ms.openlocfilehash: 1a019b58d4c2f1e5569cc4e8dd9109e08f313d6c
-  ms.sourcegitcommit: f9448a4d87226362a02b14d88290ad6b1aea9d82
+  author: mtillman
+  ms.author: mtillman
+  manager: daveba
+  ms.date: 07/27/2019
+  ms.openlocfilehash: f3e8495671b56eda804e33b78667cf75cc2f8e70
+  ms.sourcegitcommit: 6cff17b02b65388ac90ef3757bf04c6d8ed3db03
   ms.translationtype: HT
   ms.contentlocale: nl-NL
-  ms.lasthandoff: 06/07/2019
-  ms.locfileid: "66481862"
+  ms.lasthandoff: 07/29/2019
+  ms.locfileid: "68607626"
 highlightedContent:
   items:
   - title: Wat is Azure AD?
     itemType: overview
-    url: /azure/active-directory/fundamentals/active-directory-whatis
+    url: ./fundamentals/active-directory-whatis.md
   - title: Wat is er nieuw in Azure AD?
     itemType: whats-new
-    url: /azure/active-directory/fundamentals/whats-new
+    url: ./fundamentals/whats-new.md
   - title: Rollen toewijzen aan gebruikers
     itemType: how-to-guide
-    url: /azure/active-directory/fundamentals/active-directory-users-assign-role-azure-portal
+    url: ./fundamentals/active-directory-users-assign-role-azure-portal.md
   - title: Een groep maken en leden toevoegen
     itemType: how-to-guide
-    url: /azure/active-directory/fundamentals/add-users-azure-active-directory
+    url: ./fundamentals/add-users-azure-active-directory.md
   - title: Controlelijst voor Azure AD-implementatie
     itemType: concept
-    url: /azure/active-directory/fundamentals/active-directory-deployment-checklist-p2
+    url: ./fundamentals/active-directory-deployment-checklist-p2.md
   - title: Een abonnement toevoegen aan uw tenant
     itemType: how-to-guide
-    url: /azure/active-directory/fundamentals/active-directory-how-subscriptions-associated-directory
+    url: ./fundamentals/active-directory-how-subscriptions-associated-directory.md
 conceptualContent:
   items:
   - title: Toepassingsbeheer
     links:
-    - url: /azure/active-directory/manage-apps/what-is-single-sign-on
+    - url: ./manage-apps/what-is-single-sign-on.md
       itemType: concept
       text: Wat is eenmalige aanmelding?
-    - url: /azure/active-directory/manage-apps/user-provisioning
+    - url: ./manage-apps/user-provisioning.md
       itemType: tutorial
       text: Automatisch gebruikers inrichten
-    - url: /azure/active-directory/manage-apps/application-proxy
+    - url: ./manage-apps/application-proxy.md
       itemType: concept
       text: Toepassingsproxy voor on-premises apps
     footerLink:
-      url: /azure/active-directory/manage-apps/index
+      url: ./manage-apps/index.yml
       text: Meer informatie
   - title: Verificatie
     links:
-    - url: /azure/active-directory/authentication/concept-mfa-howitworks
+    - url: ./authentication/concept-mfa-howitworks.md
       itemType: concept
       text: Hoe werkt het? Azure MFA
-    - url: /azure/active-directory/authentication/concept-sspr-howitworks
+    - url: ./authentication/concept-sspr-howitworks.md
       itemType: concept
       text: Azure AD-selfservice voor wachtwoordherstel
-    - url: /azure/active-directory/authentication/concept-password-ban-bad
+    - url: ./authentication/concept-password-ban-bad.md
       itemType: concept
       text: Wachtwoordbeveiliging in Azure AD
     footerLink:
-      url: /azure/active-directory/authentication/index
+      url: ./authentication/index.yml
       text: Meer informatie
   - title: Business-to-business (B2B)
     links:
-    - url: /azure/active-directory/b2b/what-is-b2b
+    - url: ./b2b/what-is-b2b.md
       itemType: overview
       text: Wat is Azure AD B2B?
-    - url: /azure/active-directory/b2b/add-users-administrator
+    - url: ./b2b/add-users-administrator.md
       itemType: how-to-guide
       text: Gastgebruikers toevoegen in de portal
-    - url: /azure/active-directory/b2b/o365-external-user
+    - url: ./b2b/o365-external-user.md
       itemType: concept
       text: B2B en Office 365 delen
     footerLink:
-      url: /azure/active-directory/b2b/index
+      url: ./b2b/index.yml
       text: Meer informatie
   - title: Business-to-customer (B2C)
     links:
-    - url: /azure/active-directory-b2c/active-directory-b2c-overview
+    - url: ../active-directory-b2c/active-directory-b2c-overview.md
       itemType: overview
       text: Wat is Azure AD B2C?
-    - url: /azure/active-directory-b2c/tutorial-create-tenant
+    - url: ../active-directory-b2c/tutorial-create-tenant.md
       itemType: tutorial
       text: Een Azure AD B2C-tenant maken
-    - url: /azure/active-directory-b2c/active-directory-b2c-get-started-custom
+    - url: ../active-directory-b2c/active-directory-b2c-get-started-custom.md
       itemType: how-to-guide
       text: Aangepast beleid in Azure AD B2C
     footerLink:
-      url: /azure/active-directory-b2c/index
+      url: ../active-directory-b2c/index.yml
       text: Meer informatie
   - title: Voorwaardelijke toegang
     links:
-    - url: /azure/active-directory/conditional-access/overview
+    - url: ./conditional-access/overview.md
       itemType: overview
       text: Wat is voorwaardelijke toegang?
-    - url: /azure/active-directory/conditional-access/app-based-mfa
+    - url: ./conditional-access/app-based-mfa.md
       itemType: quickstart
       text: Meervoudige verificatie vereisen voor specifieke apps
-    - url: /azure/active-directory/conditional-access/location-condition
+    - url: ./conditional-access/location-condition.md
       itemType: concept
       text: Voorwaarden op basis van locatie
     footerLink:
-      url: /azure/active-directory/conditional-access/index
+      url: ./conditional-access/index.yml
       text: Meer informatie
   - title: Ontwikkelaars
     links:
-    - url: /azure/active-directory/develop/about-microsoft-identity-platform
+    - url: ./develop/about-microsoft-identity-platform.md
       itemType: overview
       text: Over het Microsoft Identity Platform
-    - url: /azure/active-directory/develop/v2-oauth2-auth-code-flow
+    - url: ./develop/v2-oauth2-auth-code-flow.md
       itemType: concept
       text: Toestemming voor OAuth 2.0-codestroom
-    - url: /azure/active-directory/develop/quickstart-register-app
+    - url: ./develop/quickstart-register-app.md
       itemType: quickstart
       text: Een app registreren bij het Microsoft Identity Platform
     footerLink:
-      url: /azure/active-directory/develop/index
+      url: ./develop/index.yml
       text: Meer informatie
   - title: Apparaatbeheer
     links:
-    - url: /azure/active-directory/devices/overview
+    - url: ./devices/overview.md
       itemType: overview
       text: Wat is apparaatbeheer?
-    - url: /azure/active-directory/devices/hybrid-azuread-join-plan
+    - url: ./devices/hybrid-azuread-join-plan.md
       itemType: how-to-guide
       text: Een hybride Azure AD-join plannen
-    - url: /azure/active-directory/devices/azureadjoin-plan
+    - url: ./devices/azureadjoin-plan.md
       itemType: how-to-guide
       text: Een Azure AD-join plannen
     footerLink:
-      url: /azure/active-directory/devices/index
+      url: ./devices/index.yml
       text: Meer informatie
   - title: Domeinservices
     links:
-    - url: /azure/active-directory-domain-services/active-directory-ds-overview
+    - url: ../active-directory-domain-services/active-directory-ds-overview.md
       itemType: overview
       text: Wat is Azure AD Domain Services?
-    - url: /azure/active-directory-domain-services/active-directory-ds-getting-started
+    - url: ../active-directory-domain-services/active-directory-ds-getting-started.md
       itemType: quickstart
       text: Azure AD Domain Services inschakelen
-    - url: /azure/active-directory-domain-services/active-directory-ds-admin-guide-administer-group-policy
+    - url: ../active-directory-domain-services/active-directory-ds-admin-guide-administer-group-policy.md
       itemType: how-to-guide
       text: Groepsbeleid beheren
     footerLink:
-      url: /azure/active-directory-domain-services/index
+      url: ../active-directory-domain-services/index.yml
       text: Meer informatie
   - title: Zakelijke gebruikers
     links:
-    - url: /azure/active-directory/users-groups-roles/groups-create-rule
+    - url: ./users-groups-roles/groups-create-rule.md
       itemType: how-to-guide
       text: Een dynamische groep maken
-    - url: /azure/active-directory/users-groups-roles/groups-settings-v2-cmdlets
+    - url: ./users-groups-roles/groups-settings-v2-cmdlets.md
       itemType: how-to-guide
       text: PowerShell voor Azure AD-groepen
-    - url: /azure/active-directory/users-groups-roles/directory-service-limits-restrictions
+    - url: ./users-groups-roles/directory-service-limits-restrictions.md
       itemType: reference
       text: Servicelimieten en -beperkingen voor Azure AD
     footerLink:
-      url: /azure/active-directory/users-groups-roles/index
+      url: ./users-groups-roles/index.yml
       text: Meer informatie
   - title: Hybride identiteit
     links:
-    - url: /azure/active-directory/hybrid/whatis-hybrid-identity
+    - url: ./hybrid/whatis-hybrid-identity.md
       itemType: overview
       text: Wat is hybride identiteit?
-    - url: /azure/active-directory/hybrid/how-to-connect-sso
+    - url: ./hybrid/how-to-connect-sso.md
       itemType: how-to-guide
       text: Eenmalige aanmelding met Azure AD Connect
-    - url: /azure/active-directory/hybrid/how-to-connect-install-custom
+    - url: ./hybrid/how-to-connect-install-custom.md
       itemType: how-to-guide
       text: Aangepaste Azure AD Connect-installatie
     footerLink:
-      url: /azure/active-directory/hybrid/index
+      url: ./hybrid/index.yml
       text: Meer informatie
   - title: Identiteitsbeheer
     links:
-    - url: /azure/active-directory/governance/create-access-review
+    - url: ./governance/create-access-review.md
       itemType: how-to-guide
       text: Een toegangsbeoordeling maken
-    - url: /azure/active-directory/governance/perform-access-review
+    - url: ./governance/perform-access-review.md
       itemType: how-to-guide
       text: Een toegangsbeoordeling starten
-    - url: /azure/active-directory/conditional-access/terms-of-use
+    - url: ./conditional-access/terms-of-use.md
       itemType: how-to-guide
       text: Gebruiksvoorwaarden vereisen
     footerLink:
-      url: /azure/active-directory/governance/index
+      url: ./governance/index.yml
       text: Meer informatie
   - title: Identiteitsbeveiliging
     links:
-    - url: /azure/active-directory/identity-protection/overview
+    - url: ./identity-protection/overview.md
       itemType: overview
       text: Wat is identiteitsbeveiliging?
-    - url: /azure/active-directory/identity-protection/quickstart-sign-in-risk-policy
+    - url: ./identity-protection/quickstart-sign-in-risk-policy.md
       itemType: quickstart
       text: Toegang blokkeren wanneer er een sessierisico wordt gedetecteerd
-    - url: /azure/active-directory/identity-protection/howto-unblock-user
+    - url: ./identity-protection/howto-unblock-user.md
       itemType: how-to-guide
       text: Gebruikers deblokkeren
     footerLink:
-      url: /azure/active-directory/identity-protection/index
+      url: ./identity-protection/index.yml
       text: Meer informatie
   - title: Beheerde identiteiten voor Azure-resources
     links:
-    - url: /azure/active-directory/managed-identities-azure-resources/tutorial-windows-vm-access-sql
+    - url: ./managed-identities-azure-resources/tutorial-windows-vm-access-sql.md
       itemType: tutorial
       text: Toegang krijgen tot Azure SQL met een virtuele Windows-machine
-    - url: /azure/active-directory/managed-identities-azure-resources/how-to-use-vm-token
+    - url: ./managed-identities-azure-resources/how-to-use-vm-token.md
       itemType: how-to-guide
       text: Virtuele Azure-machine gebruiken om tokens te verkrijgen
-    - url: /azure/active-directory/managed-identities-azure-resources/services-support-managed-identities
+    - url: ./managed-identities-azure-resources/services-support-managed-identities.md
       itemType: concept
       text: Services die beheerde identiteiten ondersteunen
     footerLink:
-      url: /azure/active-directory/managed-identities-azure-resources/index
+      url: ./managed-identities-azure-resources/index.yml
       text: Meer informatie
   - title: Privileged Identity Management (PIM)
     links:
-    - url: /azure/active-directory/privileged-identity-management/pim-getting-started
+    - url: ./privileged-identity-management/pim-getting-started.md
       itemType: how-to-guide
       text: Beginnen met PIM
-    - url: /azure/active-directory/privileged-identity-management/pim-how-to-activate-role
+    - url: ./privileged-identity-management/pim-how-to-activate-role.md
       itemType: how-to-guide
       text: Mijn directory-rollen activeren
-    - url: /azure/active-directory/privileged-identity-management/pim-how-to-add-role-to-user
+    - url: ./privileged-identity-management/pim-how-to-add-role-to-user.md
       itemType: how-to-guide
       text: Directory-rollen toewijzen
     footerLink:
-      url: /azure/active-directory/privileged-identity-management/index
+      url: ./privileged-identity-management/index.yml
       text: Meer informatie
   - title: Rapporten en controle
     links:
-    - url: /azure/active-directory/reports-monitoring/concept-audit-logs
+    - url: ./reports-monitoring/concept-audit-logs.md
       itemType: concept
       text: Auditlogboeken
-    - url: /azure/active-directory/reports-monitoring/concept-sign-ins
+    - url: ./reports-monitoring/concept-sign-ins.md
       itemType: concept
       text: Aanmeldingslogboeken
-    - url: /azure/active-directory/reports-monitoring/reference-sign-ins-error-codes
+    - url: ./reports-monitoring/reference-sign-ins-error-codes.md
       itemType: reference
       text: Naslaginformatie over foutcodes voor aanmelding
     footerLink:
-      url: /azure/active-directory/reports-monitoring/index
+      url: ./reports-monitoring/index.yml
       text: Meer informatie
 additionalContent:
   sections:
