--- a/articles/hdinsight/spark/TOC.yml
+++ b/articles/hdinsight/spark/TOC.yml
@@ -50,6 +50,18 @@
       href: ../hdinsight-version-release.md
     - name: Beschikbaarheid van het cluster bewaken met Ambari en Azure Monitor-logboeken
       href: ../hdinsight-cluster-availability.md
+    - name: Problemen oplossen
+      items:
+        - name: OutOfMemoryError-uitzondering
+          items:
+            - name: Onvoldoende geheugen voor heap
+              href: ./apache-spark-troubleshoot-outofmemory-heap.md
+        - name: IllegalArgumentException-uitzondering
+          href: ./apache-spark-troubleshoot-illegalargumentexception.md
+        - name: Apache Spark-streamingtoepassing stopt
+          href: ./apache-spark-troubleshoot-application-stops.md
+        - name: RpcTimeoutException-uitzondering
+          href: ./apache-spark-troubleshoot-rpctimeoutexception.md
 - name: Procedures
   items:
     - name: Clusteropslag gebruiken
