commit translated contents

--- a/articles/cognitive-services/Bing-Entities-Search/toc.yml
+++ b/articles/cognitive-services/Bing-Entities-Search/toc.yml
@@ -93,6 +93,7 @@
     - name: Bing Entiteiten zoeken-eindpunt
       href: entity-search-endpoint.md
     - name: Analytische gegevens voor Bing Entiteiten zoeken-API
-      href: bing-entity-stats.md
+      maintainContext: true
+      href: ../bing-web-search/bing-web-stats.md
     - name: Naleving
       href: 'https://azure.microsoft.com/support/legal/cognitive-services-compliance-and-privacy/'
