--- a/articles/cognitive-services/Bing-Image-Search/toc.yml
+++ b/articles/cognitive-services/Bing-Image-Search/toc.yml
@@ -115,6 +115,7 @@
     - name: Ondersteuning voor taal en regio
       href: language-support.md
     - name: Analytische gegevens voor Bing Afbeeldingen zoeken-API
-      href: bing-image-stats.md
+      maintainContext: true
+      href: ../bing-web-search/bing-web-stats.md
     - name: Naleving
       href: 'https://azure.microsoft.com/support/legal/cognitive-services-compliance-and-privacy/'
