--- a/articles/cognitive-services/text-analytics/toc.yml
+++ b/articles/cognitive-services/text-analytics/toc.yml
@@ -7,6 +7,8 @@
       href: overview.md
     - name: Voorbeeldgebruikerscenario's
       href: text-analytics-user-scenarios.md
+    - name: Nieuwe functies
+      href: whats-new.md
 - name: Snelstartgidsen
   expanded: true
   items:
